syntax = "proto3";

option java_multiple_files = true;

package com.demo.dubbo.tri.grpc;


// The request message containing the user's name.
message GreeterRequest {
  string name = 1;
}

// The response message containing the greetings
message GreeterReply {
  string message = 1;
}

service GreeterProtoService{

  // unary
  rpc greet(GreeterRequest) returns (GreeterReply);

  // bi streaming
  rpc greetStream(stream GreeterRequest) returns (stream GreeterReply);

  // serverStream
  rpc greetServerStream(GreeterRequest) returns (stream GreeterReply);

}
